k8s/dev/ingress.yaml
# Kubernetes Ingress for Dev
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress-dev
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: ecommerce-backend-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ecommerce-frontend-service
            port:
              number: 3000
